force-app/main/default/objects/Related_Help_Desk_Ticket__c/Related_Help_Desk_Ticket__c.object-meta.xml
<CustomObject>
    <label>Related Help Desk Ticket</label>
    <nameField>
        <displayFormat>Ticket-{0000}</displayFormat>
        <label>Related Help Desk Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Help Desk Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>