force-app/main/default/objects/Related_Help_Desk_Ticket__c/fields/Original_Help_Desk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Original_Help_Desk_Ticket__c</fullName>
    <label>Original Help Desk Ticket</label>
    <referenceTo>Help_Desk_Ticket__c</referenceTo>
    <relationshipLabel>Related Help Desk Tickets</relationshipLabel>
    <relationshipName>Related_Help_Desk_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>