force-app/main/default/objects/Related_Help_Desk_Ticket__c/fields/Related_Help_Desk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Related_Help_Desk_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Help Desk Ticket</label>
    <referenceTo>Help_Desk_Ticket__c</referenceTo>
    <relationshipName>Related_Help_Desk_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>